discussion/kv_engine/158184/158184_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36377: Make TransactionContext/PersistenceCallback take const Item&

We don't need to bump the ref count of the ptr in these functions.

Change-Id: I96a2e0760bc27befdcf95f376141b200dc1219ae

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-07-28 08:38:16.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-28 08:57:32.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10886/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googletest/include/gtest/gtest-printers.h:157:15: error: invalid application of "sizeof" to an incomplete type "const Item" [clang-diagnostic-error]
        sizeof(value), os);
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googletest/include/gtest/gtest-printers.h:246:56: note: in instantiation of member function "testing::internal2::TypeWithoutFormatter<Item, testing::internal2::kOtherType>::PrintValue" requested here
                                         kOtherType)>::PrintValue(x, &os);
                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googletest/include/gtest/gtest-printers.h:287:7: note: in instantiation of function template specialization "testing::internal2::operator<<<char, std::char_traits<char>, Item>" requested here
  *os << value;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googletest/include/gtest/gtest-printers.h:468:23: note: in instantiation of function template specialization "testing_internal::DefaultPrintNonContainerTo<Item>" requested here
  ::testing_internal::DefaultPrintNonContainerTo(value, os);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googletest/include/gtest/gtest-printers.h:503:3: note: in instantiation of function template specialization "testing::internal::DefaultPrintTo<Item>" requested here
  DefaultPrintTo(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googletest/include/gtest/gtest-printers.h:679:5: note: in instantiation of function template specialization "testing::internal::PrintTo<Item>" requested here
    PrintTo(value, os);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googletest/include/gtest/gtest-printers.h:869:25: note: (skipping 5 contexts in backtrace; use -ftemplate-backtrace-limit=0 to see all)
  UniversalPrinter<T1>::Print(value, os);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googletest/include/gtest/gtest-printers.h:679:5: note: in instantiation of function template specialization "testing::internal::PrintTo<const Item &, KVStore::FlushStateMutation>" requested here
    PrintTo(value, os);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googletest/include/gtest/gtest-printers.h:869:25: note: in instantiation of member function "testing::internal::UniversalPrinter<std::tuple<const Item &, KVStore::FlushStateMutation> >::Print" requested here
  UniversalPrinter<T1>::Print(value, os);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googlemock/include/gmock/gmock-spec-builders.h:1679:5: note: in instantiation of function template specialization "testing::internal::UniversalPrint<std::tuple<const Item &, KVStore::FlushStateMutation> >" requested here
    UniversalPrint(args, os);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googlemock/include/gmock/gmock-spec-builders.h:1469:3: note: in instantiation of member function "testing::internal::FunctionMocker<void (const Item &, KVStore::FlushStateMutation)>::UntypedDescribeUninterestingCall" requested here
  FunctionMocker() {}
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:189:5: note: in instantiation of member function "testing::internal::FunctionMocker<void (const Item &, KVStore::FlushStateMutation)>::FunctionMocker" requested here
    MockTransactionContext(Vbid vb) : TransactionContext(vb) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/diskdockey.h:17:7: note: forward declaration of "Item"
class Item;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10886/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/googletest/googletest/include/gtest/gtest-printers.h:157:15:
error: invalid application of "sizeof" to an incomplete type "const Item" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10886/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9546/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38097/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32482/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/504/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11589/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12474/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/475/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12653/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13004/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20553/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-07-28 08:58:14.000000000
Message: 
Patch Set 2: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
